--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <baner>
-            <img src="ee.09_rysunek1.jpg" alt="baner">
+            <img src="baner.gif" alt="baner">
         </baner>
         <aside>
             <p>
