--- a/kalkulator.html
+++ b/kalkulator.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <baner>
-            <img src="ee.09_rysunek2.jpg" alt="baner">
+            <img src="baner.gif" alt="baner">
         </baner>
         <aside>
             <p>
